Working on new OAuth system for Lapdog
